--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -5,27 +5,7 @@
     </div> -->
     <div class="row" style="padding: 10px;">
         <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
-            <div class="col-12 col-lg-4 mb-3 ">
-                <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3"
-                    (click)="addnew()">
-                    <!-- <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" > -->
-                    <div class="d-flex justify-content-around">
-                        <div class="mt-2 mb-3 text-center text1">Current Balance</div>
-                        <i class="fa-solid fa-share forward mt-2 mb-3"></i>
-                    </div>
-                    <div class="d-flex justify-content-center align-item-center ">
-                        <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                        <h5>{{operatorBalance}} </h5>
-                    </div>
-                </div>
-                <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3">
-                    <div class="mt-2 mb-3 text-center text1">Current Balance</div>
-                    <div class="d-flex justify-content-center align-item-center ">
-                        <!-- <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i> -->
-                        <!-- <h5>{{operatorBalance}} </h5> -->
-                    </div>
-                </div>
-            </div>
+
             <div class="col-12 col-lg-4 mb-3 ">
                 <div class="card d-flex flex-column justify-content-between p-3">
                     <div class="mt-2 mb-3 text-center text1">MSO Recharge</div>
@@ -44,6 +24,16 @@
                         <h5> {{operatorDetailsCount?.todayrechargecount}}
                         </h5>
                     </div>
+                </div>
+            </div>
+            <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" (click)="addnew()">
+                <div class="d-flex justify-content-around">
+                    <div class="mt-2 mb-3 text-center text1">Current Balance</div>
+                    <i class="fa-solid fa-share forward mt-2 mb-3"></i>
+                </div>
+                <div class="d-flex justify-content-center align-item-center ">
+                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                    <h5>{{operatorBalance}} </h5>
                 </div>
             </div>
         </div>
