--- a/src/app/admin/features/channel_setting/_Dialogue/Inventory/edit-inventory/edit-inventory.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Inventory/edit-inventory/edit-inventory.component.html
@@ -59,6 +59,14 @@
             </div>
             <div class="input_box col-12 col-md-12 display justify-content-center align-items-center">
                 <div class="col-12 col-md-4">
+                    <label>Sample Format</label>
+                </div>
+                <div class="col-12 col-md-8 mb-3 file-upload-container">
+                      <a class="mb-3" (click)="generateExcel()" style="cursor: pointer;">* Download Format File</a>
+                </div>
+            </div>
+            <div class="input_box col-12 col-md-12 display justify-content-center align-items-center">
+                <div class="col-12 col-md-4">
                     <label>Choose File</label>
                 </div>
                 <div class="col-12 col-md-8 mb-3 file-upload-container">
@@ -133,6 +141,15 @@
                     </mat-autocomplete>
                 </div>
             </div>
+            <div class="input_box col-12 col-md-12 display justify-content-center align-items-center">
+                <div class="col-12 col-md-4">
+                    <label>Sample Format</label>
+                </div>
+                <div class="col-12 col-md-8 mb-3 file-upload-container">
+                      <a class="mb-3" (click)="generateExcel()" style="cursor: pointer;">* Download Format File</a>
+                </div>
+            </div>
+        
             <div class="input_box col-12 col-md-12 display justify-content-center align-items-center">
                 <div class="col-12 col-md-4">
                     <label>Choose File</label>
