--- a/src/app/admin/features/home/home.component.html
+++ b/src/app/admin/features/home/home.component.html
@@ -86,7 +86,7 @@
                         <div class="mb-3">
                             <h6
                                 style="color:rgb(83, 81, 81);font-size: 20px;font-weight: 600;text-align: start;font-family:sans-serif;">
-                                CAS CONNECTION DETAILS</h6>
+                                CAS WISE INVENTORY DETAILS</h6>
                         </div>
                         <div class="col">
                             <ag-grid-angular #agGrid id="myGrid"
