--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -641,7 +641,9 @@
                                     }}</a>
                             </div>
                         </div>
+                           <a (click)="startListening('/voice')">🎙️ </a>
                     </div>
+                  
                     <div class="d-block">
                         <div class=" d-flex justify-content-between align-items-center mx-2 tooltip-container ">
                             <a class="logout " (click)="logout()">
