--- a/src/app/admin/features/Bulk_operation/bulkoperatorcreation/bulkoperatorcreation.component.scss
+++ b/src/app/admin/features/Bulk_operation/bulkoperatorcreation/bulkoperatorcreation.component.scss
@@ -38,6 +38,7 @@ p {
 .checkbox-content input:checked {
     accent-color: #09a223;
 }
+
 .commission {
     padding: 15px;
     // max-height: fit-content;
@@ -45,6 +46,7 @@ p {
     z-index: 1000;
     // overflow: scroll;
 }
+
 .title p {
     color: var(--primary-color);
     font-size: 20px;
@@ -52,4 +54,32 @@ p {
     text-align: center;
     padding: 20px;
     background-color: antiquewhite;
+}
+
+.btn {
+    color: var(--primary-color);
+    background-color: lightgray;
+}
+
+.btn:hover {
+    color: white;
+    background-color: var(--primary-color);
+}
+
+#myGrid {
+    width: 100%;
+    height: 600px;
+    text-align: center;
+}
+
+.responsive-grid {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+@media (max-width: 768px) {
+    .responsive-grid {
+        width: 100%;
+    }
 }
