--- a/src/app/admin/features/special_role/Bulk operaton/speciallcotransfer/speciallcotransfer.component.html
+++ b/src/app/admin/features/special_role/Bulk operaton/speciallcotransfer/speciallcotransfer.component.html
@@ -2,54 +2,55 @@
     <div class="title">
         <p>LCO TRANSFER</p>
     </div>
-    <div class="" style="margin:30px auto;max-width: 500px;">
-        <!-- Left Column (File Upload and Instructions) -->
-        <!-- <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center mb-4 mb-lg-0"> -->
-        <div class="card p-4 file ">
-            <div class="d-flex justify-content-center align-items-center mb-3">
-                <img src="/assets/images/icons/dashboard.png" class="img" alt="File Icon">
-            </div>
-            <div class="mb-1">
-                <div class="">
-                    <span class="p">* Must have kept the data according to the format file (Please check the format
-                        file by below download option)and fill the Smartcard number without incorrect and Select LCO
-                        , Street and Area.
-                        <span style="color: red;"> Otherwise LCO Doesn't Change .</span>
-                    </span>
+    <div class="row">
+        <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center mb-4 mb-lg-0">
+            <!-- Left Column (File Upload and Instructions) -->
+            <!-- <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center mb-4 mb-lg-0"> -->
+            <div class="card p-4 file ">
+                <div class="d-flex justify-content-center align-items-center mb-3">
+                    <img src="/assets/images/icons/dashboard.png" class="img" alt="File Icon">
                 </div>
-            </div>
-            <a class="mb-3" (click)="generateExcel('LCO Transfer')" style="cursor: pointer;">* Download Format
-                File</a>
-            <div class="checkbox-text mb-3">
-                <div class="checkbox-content">
-                    <input type="checkbox" id="terms" (change)="onCheckboxChange($event)">
-                    <label for="confirmPass">I agree to the above statement</label>
-                </div>
-            </div>
-            <div class="d-flex">
-                <div class="col-4 col-md-4 col-sm-6 mb-3">
-                    <label class="btn " [style.background-color]="isCheckboxChecked ? '#3d5e80' : '#d3d3d3'"
-                        [style.color]="isCheckboxChecked ? 'white' : 'black'"
-                        [style.cursor]="isCheckboxChecked ? 'pointer' : 'not-allowed'">
-                        <i class="fa fa-plus"></i> Choose
-                        <input type="file" style="display: none;" [disabled]="!isCheckboxChecked"
-                            accept=".xls,.xlsx,.csv" (change)="handleFileInput($event)">
-                    </label>
-                </div>
-                <div class="col-8 col-md-8 col-sm-6 mb-3">
-                    <span style="color:#0a21d0">{{ filePath }} </span>
-                </div>
-            </div>
-
-            <!-- Row for LCO -->
-            <div class="">
-                <!-- Row for LCO -->
-                <div class="row - display align-items-center">
-                    <div class="col-6 col-md-4 ">
-                        <label for="lco" style="color: #261b72;font-size: 15px;">Choose LCO :</label>
+                <div class="mb-1">
+                    <div class="">
+                        <span class="p">* Must have kept the data according to the format file (Please check the format
+                            file by below download option)and fill the Smartcard number without incorrect and Select LCO
+                            , Street and Area.
+                            <span style="color: red;"> Otherwise LCO Doesn't Change .</span>
+                        </span>
                     </div>
-                    <div class="col-12  col-md-6 mb-3">
-                        <!-- <mat-form-field appearance="outline" class="w-100">
+                </div>
+                <a class="mb-3" (click)="generateExcel('LCO Transfer')" style="cursor: pointer;">* Download Format
+                    File</a>
+                <div class="checkbox-text mb-3">
+                    <div class="checkbox-content">
+                        <input type="checkbox" id="terms" (change)="onCheckboxChange($event)">
+                        <label for="confirmPass">I agree to the above statement</label>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="col-4 col-md-4 col-sm-6 mb-3">
+                        <label class="btn " [style.background-color]="isCheckboxChecked ? '#3d5e80' : '#d3d3d3'"
+                            [style.color]="isCheckboxChecked ? 'white' : 'black'"
+                            [style.cursor]="isCheckboxChecked ? 'pointer' : 'not-allowed'">
+                            <i class="fa fa-plus"></i> Choose
+                            <input type="file" style="display: none;" [disabled]="!isCheckboxChecked"
+                                accept=".xls,.xlsx,.csv" (change)="handleFileInput($event)">
+                        </label>
+                    </div>
+                    <div class="col-8 col-md-8 col-sm-6 mb-3">
+                        <span style="color:#0a21d0">{{ filePath }} </span>
+                    </div>
+                </div>
+
+                <!-- Row for LCO -->
+                <div class="">
+                    <!-- Row for LCO -->
+                    <div class="row - display align-items-center">
+                        <div class="col-6 col-md-4 ">
+                            <label for="lco" style="color: #261b72;font-size: 15px;">Choose LCO :</label>
+                        </div>
+                        <div class="col-12  col-md-6 mb-3">
+                            <!-- <mat-form-field appearance="outline" class="w-100">
                             <mat-label>Select LCO</mat-label>
                             <mat-select [(ngModel)]="lco" (ngModelChange)="onSubscriberStatusChange()" name="lco"
                                 required>
@@ -61,58 +62,93 @@
                         </mat-form-field> -->
 
 
-                        <select id="lco" [(ngModel)]="lco">
-                            <option value="0" selected>Select Operator</option>
-                            <option *ngFor="let lco of lcoList" [value]="lco.value"
-                                (ngModelChange)="onSubscriberStatusChange($event)">
-                                {{ lco.name }}
-                            </option>
-                        </select>
+                            <select id="lco" [(ngModel)]="lco">
+                                <option value="0" selected>Select Operator</option>
+                                <option *ngFor="let lco of lcoList" [value]="lco.value"
+                                    (ngModelChange)="onSubscriberStatusChange($event)">
+                                    {{ lco.name }}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <!-- Row for Area -->
+                    <div class="row  display align-items-center mb-3">
+                        <div class="col-6  col-md-4 ">
+                            <label for="area" style="color: #261b72;font-size: 15px;">Choose Area :</label>
+                        </div>
+                        <div class="col-12  col-md-6">
+                            <select id="area" [(ngModel)]="area">
+                                <option value="0" selected>Select Area</option>
+                                <option *ngFor="let area of areaList" [value]="area.value"
+                                    (ngModelChange)="onAreaStatusChange($event)">
+                                    {{ area.name }}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <!-- Row for Street -->
+                    <div class="row  display align-items-center">
+                        <div class="col-6   col-md-4">
+                            <label for="street" style="color: #261b72;font-size: 15px;">Choose Street :</label>
+                        </div>
+                        <div class="col-12  col-md-6 mb-3">
+                            <select id="street" [(ngModel)]="street">
+                                <option value="0" selected>Select Street</option>
+                                <option *ngFor="let Street of streetList" [value]="Street.value"
+                                    (ngModelChange)="onStreetList($event)">
+                                    {{ Street.name }}
+                                </option>
+                            </select>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Row for Area -->
-                <div class="row  display align-items-center mb-3">
-                    <div class="col-6  col-md-4 ">
-                        <label for="area" style="color: #261b72;font-size: 15px;">Choose Area :</label>
-                    </div>
-                    <div class="col-12  col-md-6">
-                        <select id="area" [(ngModel)]="area">
-                            <option value="0" selected>Select Area</option>
-                            <option *ngFor="let area of areaList" [value]="area.value"
-                                (ngModelChange)="onAreaStatusChange($event)">
-                                {{ area.name }}
-                            </option>
-                        </select>
-                    </div>
-                </div>
 
-                <!-- Row for Street -->
-                <div class="row  display align-items-center">
-                    <div class="col-6   col-md-4">
-                        <label for="street" style="color: #261b72;font-size: 15px;">Choose Street :</label>
-                    </div>
-                    <div class="col-12  col-md-6 mb-3">
-                        <select id="street" [(ngModel)]="street">
-                            <option value="0" selected>Select Street</option>
-                            <option *ngFor="let Street of streetList" [value]="Street.value"
-                                (ngModelChange)="onStreetList($event)">
-                                {{ Street.name }}
-                            </option>
-                        </select>
-                    </div>
+
+                <div class="d-flex justify-content-end align-items-center mt-3">
+                    <button type="submit" class="btn btn-success" [disabled]="!isCheckboxChecked || !isFileSelected"
+                        (click)="submit()">
+                        Submit
+                    </button>
                 </div>
             </div>
+            <!-- </div> -->
+        </div>
+         <div class="col-12 col-lg-8 d-flex justify-content-center">
+            <div class="card col-12">
+                <!-- <div class="title">
+                    <h5>BULK FIRST TIME ACTIVATION HISTORY</h5>
+                </div> -->
+                <div class="row d-flex align-items-center justify-content-center" style="padding: 0.5rem;">
+                    <div class="col-12 mb-3">
+                        <div class="row align-items-start justify-content-center mb-3" style="gap:10px;">
+                            <div class="col-12 col-md-3 mb-2 mb-md-0 ">
+                                <input class="date form-control  bttn" type="date" name="" id=""
+                                    [(ngModel)]="selectedDate">
+                            </div>
+                            <div class="col-12 col-md-3 mb-2 mb-md-0">
+                                <button class="btn btn-secondary w-100 bttn" (click)="getData()">Get Data</button>
+                            </div>
+                            <div class="col-12 col-md-3 mb-2 mb-md-0">
+                                <button class="btn btn-secondary w-100 bttn" (click)="refresh()">Refresh</button>
+                            </div>
+                            <div class="col-12 col-md-1 mb-2  export-icon me-2" (click)="getActivationReport(2)">
+                                <img src="/assets/images/icons/Excel.png" alt="Excel Icon">
+                            </div>
+                            <div class="col-12 col-md-1 mb-2  export-icon" (click)="getActivationReport(1)">
+                                <img src="/assets/images/icons/pdf.png" alt="PDF Icon">
+                            </div>
+                        </div>
 
-
-
-            <div class="d-flex justify-content-end align-items-center mt-3">
-                <button type="submit" class="btn btn-success" [disabled]="!isCheckboxChecked || !isFileSelected"
-                    (click)="submit()">
-                    Submit
-                </button>
+                        <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class"
+                            rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
+                            [columnDefs]="columnDefs" [rowData]="rowData" [enableCellTextSelection]="true">
+                        </ag-grid-angular>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- </div> -->
     </div>
 </section>
