--- a/src/app/admin/features/special_role/Bulk operaton/speciallcotransfer/speciallcotransfer.component.scss
+++ b/src/app/admin/features/special_role/Bulk operaton/speciallcotransfer/speciallcotransfer.component.scss
@@ -61,16 +61,16 @@ select,
     border-right: 0.9px solid lightgray;
 }
 
-// .btn {
-//     color: var(--primary-color);
-//     background-color: lightgray;
-// }
+
+.btn {
+    color: var(--primary-color);
+    background-color: lightgray;
+}
 
 .btn:hover {
     color: white;
     background-color: var(--primary-color);
 }
-
 .display {
     display: flex;
 }
